# SOAPdenovo2

./: .gitignore  Makefile  Makefile.am  Tupfile  Tuprules.tup  configure.ac
sparsePregraph/: Makefile  Tupfile  global.cpp
sparsePregraph127/: Tupfile
sparsePregraph63/: Tupfile
standardPregraph/: Makefile  Tupfile  lib.c  localAsm.c  orderContig.c  prlHashReads.c  prlRead2Ctg.c  prlReadFillGap.c  read2edge.c  readseq1by1.c
standardPregraph/inc/: def.h
standardPregraph127/: Tupfile
standardPregraph63/: Tupfile
