AC_INIT([SOAPdenovo], [2.0.0], [gmarcais@umd.edu])
AC_CANONICAL_HOST
AC_CONFIG_MACRO_DIR([m4])
#AC_CONFIG_AUX_DIR([aux_bin])
AM_INIT_AUTOMAKE([subdir-objects foreign parallel-tests color-tests])
AM_SILENT_RULES([yes])
AC_CONFIG_SRCDIR([standardPregraph])
AC_CONFIG_HEADERS([config.h])
AC_PROG_RANLIB
AC_PROG_CXX
AC_PROG_CC
AM_PROG_AR
#AC_PROG_LIBTOOL

AC_CONFIG_FILES([Makefile])
AC_OUTPUT
